@@ -123,16 +123,48 @@ class TestIntegration(unittest.TestCase):
         result = render('helloworld.mak', {'a':1})
         self.assertEqual(result, u'\nHello föö\n')
 
+    def test_render_from_fs(self):
+        from pyramid.renderers import render
+        self.config.add_settings({'reload_templates': True})
+        result = render('helloworld.mak', {'a':1})
+        self.assertEqual(result, u'\nHello föö\n')
+    
+    def test_render_inheritance(self):
+        from pyramid.renderers import render
+        result = render('helloinherit.mak', {})
+        self.assertEqual(result, u'Layout\nHello World!\n')
+
+    def test_render_inheritance_pkg_spec(self):
+        from pyramid.renderers import render
+        result = render('hello_inherit_pkg.mak', {})
+        self.assertEqual(result, u'Layout\nHello World!\n')
+
     def test_render_to_response(self):
         from pyramid.renderers import render_to_response
         result = render_to_response('helloworld.mak', {'a':1})
         self.assertEqual(result.ubody, u'\nHello föö\n')
+
+    def test_render_to_response_pkg_spec(self):
+        from pyramid.renderers import render_to_response
+        result = render_to_response('pyramid.tests:fixtures/helloworld.mak', {'a':1})
+        self.assertEqual(result.ubody, u'\nHello föö\n')
+    
+    def test_render_with_abs_path(self):
+        from pyramid.renderers import render
+        result = render('/helloworld.mak', {'a':1})
+        self.assertEqual(result, u'\nHello föö\n')
 
     def test_get_renderer(self):
         from pyramid.renderers import get_renderer
         result = get_renderer('helloworld.mak')
         self.assertEqual(result.implementation().render_unicode(),
                          u'\nHello föö\n')
+    
+    def test_template_not_found(self):
+        from pyramid.renderers import render
+        from mako.exceptions import TemplateLookupException
+        self.assertRaises(TemplateLookupException, render, 'helloworld_not_here.mak', {})
+
 
 class DummyLookup(object):
     def get_template(self, path):
